--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.example</groupId>
   <artifactId>selenium-java-maven-junit</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>selenium-java-maven-junit</name>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
     <junit.version>5.9.1</junit.version>
     <aspectj.version>1.9.9.1</aspectj.version>
-    <allure.version>2.19.0</allure.version>
+    <allure.version>2.20.0</allure.version>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>io.qameta.allure</groupId>
@@ -28,7 +25,7 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>6.7.2</version>
+      <version>6.11.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -52,7 +49,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>1.7.30</version>
+      <version>2.0.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
